@@ -886,10 +886,10 @@ correct one will be selected before using preseeding.
 #d-i partman-auto/init_automatically_partition \
 #      select Guided - use the largest continuous free space
 
-# Alternatively, you can specify a disk to partition. The device name
-# can be given in either devfs or traditional non-devfs format.
-# For example, to use the first disk:
-d-i partman-auto/disk string /dev/discs/disc0/disc
+# Alternatively, you can specify a disk to partition. The device name must
+# be given in traditional non-devfs format.
+# For example, to use the first SCSI/SATA hard disk:
+d-i partman-auto/disk string /dev/sda
 # In addition, you'll need to specify the method to use.
 # The presently available methods are: "regular", "lvm" and "crypto"
 d-i partman-auto/method string lvm
