@@ -49,9 +49,7 @@ loader.
 
 Useful for advanced users who want to install <command>LILO</command>
 somewhere else. In this case you will be asked for desired
-location. You can use devfs style names, such as those that start with
-<filename>/dev/ide</filename>, <filename>/dev/scsi</filename>, and
-<filename>/dev/discs</filename>, as well as traditional names, such as
+location. You can use traditional device names such as
 <filename>/dev/hda</filename> or <filename>/dev/sda</filename>.
 
 </para></listitem></varlistentry>
