@@ -28,6 +28,8 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Recommend preseeding mirror/country to "manual" rather than "enter
     information manually" (choose-mirror 2.17).
+  * Remove text talking about devfs-style device names, which are no longer
+    supported.
 
  -- Frans Pop <fjp@debian.org>  Fri, 20 Jul 2007 09:23:10 +0200
 
